# wrun

./: Cargo.toml  README.md
crates/cycles-cost/: Cargo.toml
crates/cycles-cost/src/: costs.rs  format.rs  main.rs  prices.rs
crates/wrun/: Cargo.toml
crates/wrun/src/: embedder.rs  lib.rs  main.rs  pocket_ic.rs  wasmtime.rs
src/: execenv.rs  main.rs  testnet.rs
tests/: run.sh
tests/data/: counter.wat  noop.wat
