[package]
name = "wrun"
version = "0.1.0"
edition = "2024"

[dependencies]
ic-config = { git = "https://github.com/dfinity/ic" }
ic-embedders = { git = "https://github.com/dfinity/ic" }
ic-test-utilities = { git = "https://github.com/dfinity/ic" }
ic-test-utilities-embedders = { git = "https://github.com/dfinity/ic" }
ic-test-utilities-types = { git = "https://github.com/dfinity/ic" }
ic-types = { git = "https://github.com/dfinity/ic" }
ic-test-utilities-execution-environment = { git = "https://github.com/dfinity/ic" }
ic-canister-sandbox-backend-lib = { git = "https://github.com/dfinity/ic" , features = ["fuzzing_code"] }
ic-agent = "0.45.0"
ic-cdk = "0.19.0"
ic-management-canister-types = "0.6.0"
pocket-ic = { git = "https://github.com/dfinity/ic" }

wasmtime = { version = "40.0.0", default-features = false, features = [
    'cranelift',
    'gc',
    'gc-null',
    'parallel-compilation',
    'runtime',
]}
candid = "0.10.20"
futures = "0.3.31"
serde = "1.0.209"
sha2 = "0.10.8"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
wirm = { version = "=2.1.0" }
clap = "4.5.56"
wat = "1.244.0"
